--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,17 @@ img {
     color: #fff;
 }
 
+/*Hide content initially*/
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+    display: none;
+}
+
+.show {
+    display: block !important;
+}
+
 #tab-1-content .tab-1-content-inner {
     display: grid; 
     grid-template-columns: repeat(2, 1fr);
@@ -297,6 +308,12 @@ img {
     padding: 0.8rem 1.3rem;
     text-transform: uppercase;
 }
+
+.btn-icon {
+    margin-left : 1rem;
+}
+
+/* Media Queries */
 
 @media (max-width: 960px) {
     .showcase{
